# openhardwaremonitor

./: .gitignore  OpenHardwareMonitorLib.Tests.csproj  Program.cs  TestResult.xml
.github/workflows/: ci.yml  release.yml
Hardware/: KernelDriver.cs  SMBIOS.cs
Hardware/Mainboard/: Identification.cs  Manufacturer.cs  Model.cs
Hardware/Mainboard/Tests/: IdentificationTest.cs
Hardware/Nvidia/: NVML.cs
OpenHardwareMonitor.Tests/: IdentificationTests.cs  OpenHardwareMonitor.Tests.csproj
Utilities/: HttpServer.cs  PersistentSettings.cs
app/: .gitignore  Cargo.toml  Directory.Build.props  PROJECT_SUMMARY.md  README.md  build.rs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/sidecar/: Program.cs  SensorViewBridge.csproj
app/src/: App.svelte  app.css  inventory.rs  logging.rs  main.rs  model.rs  poll.rs  report.rs  settings.rs  state.rs  sysinfo.rs  ui.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  model.rs
app/src/model/: hexblob.rs  mod.rs  storage.rs  topology.rs
app/src/source/: demo.rs  firmware.rs  lhm_bridge.rs  mod.rs
app/src/ui/: graph_window.rs  hex_window.rs  main_window.rs  mod.rs  sensors_window.rs  settings_dialog.rs  summary_window.rs  widgets.rs
app/src/web/: api.rs  assets.rs  auth.rs  mod.rs  ws.rs
app/web-dashboard/: app.js  index.html  style.css
