[package]
name = "sensorview"
version = "0.1.0"
description = "SensorView — a HWiNFO-style native hardware monitor"
authors = ["SensorView contributors"]
edition = "2021"
rust-version = "1.77"

[dependencies]
eframe = "0.35"
egui_extras = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
dirs = "6"

[target.'cfg(windows)'.dependencies]
wmi = "0.18"

[build-dependencies]
winresource = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# cargo-packager configuration (NSIS .exe / .deb / .dmg) — used by CI.
[package.metadata.packager]
product-name = "SensorView"
identifier = "com.sensorview.desktop"
category = "Utility"
icons = ["assets/icon.png", "assets/icon.ico", "assets/32x32.png"]
# Ship the LibreHardwareMonitor sidecar next to the app. `resources` is a
# top-level field; the glob resolves to nothing on non-Windows runners (where
# the .NET win-x64 sidecar isn't published), so it's harmless there.
resources = ["sidecar/publish/*.exe"]
